# openfx

./: CMakeLists.txt  conanfile.py
.claude/: settings.local.json
contrib/docs/: COMPILATION_SUCCESS.md  PROGRESS_LOG.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  comfyui-build-guide.md
contrib/plugins/ComfyUI/: CMakeLists.txt  README.md
contrib/plugins/ComfyUI/common/: comfyui_base_plugin.cpp  comfyui_base_plugin.h  comfyui_client.cpp  comfyui_client.h
contrib/plugins/ComfyUI/tests/: CMakeLists.txt  README.md  test_client.cpp
